--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UFT-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício Semântica</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -27,9 +28,11 @@
          <p>A Nimbus Stark é a Melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios da marca.</p>
          <a class="botao" href="/">VER MAIS</a>
         </div>
+        <div class="introducao-cover">
     <img class="bike" src="./img/bicicleta.jpg" alt="Bicicleta preta">
+        </div>
 </article>
-<article class="conteudo" aria-labelledby="label-vantagens">
+<article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
     <h2 class="onda" id="label-vantagens">VANTAGENS BIKCRAFT</h2>
 
     <ul class="vantagens">
